# apvis4

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  resources.gresource.xml
cmake/: GResource.cmake  findepoxy.cmake  sphinx.cmake
conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  placeholder
docs_sphinx/: Doxyfile.in  conf.py  index.rst
glade/: main_window.glade  settings.glade
include/: albumart.h  appstate.h  freqband.h  main_window.h  readinfo.h  settings.h  utils.h  vumeter.h
shaders/: aafragment.glsl  aavertex.glsl  plainfragment.glsl
src/: albumart.cpp  appstate.cpp  freqband.cpp  main.cpp  main_window.cpp  readinfo.cpp  settings.cpp  utils.cpp  vumeter.cpp
